@@ -7,6 +7,7 @@ Changes
 Bug fixes:
 
 - Prevent crash when serializing a number > 1e100 to WKT with GEOS < 3.13. (#1907)
+- Fixes GeoJSON serialization of empty points (#2118)
 
 Improvements:
 
